# sx126x_driver

./: CMakeLists.txt  toolchain.cmake
demo/: CMakeLists.txt  main.c  spi_loopback.c  sx126x_hal_linux.c  sx126x_hal_linux.h
